# darknetxx

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml  on_pr.yml
cmake/: template-project-clang-format-target.cmake  template-project-clang-tidy-target.cmake  template-project-compile-options.cmake  template-project-cppcheck-target.cmake  template-project-deb-enabler.cmake  template-project-dockerers.cmake  template-project-feature-enabler-post.cmake  template-project-feature-enabler.cmake  template-project-flatpak-target.cmake  template-project-misc-variables-declare.cmake  template-project-sanitizers.cmake  template-project-valgrind-target.cmake
cmake/compile-options/: template-project-compile-options-GCC.cmake  template-project-compile-options-MSVC.cmake
cmake/dockerers/: template-project-docker-single-runner-target.cmake  template-project-docker-variables-declare.cmake
doc/: CMakeLists.txt  Doxyfile.in  README.uk_UA.md
misc/: .clang-format  .clang-tidy  .cppcheck-suppress  Dockerfile.in  flatpak.conf.json.in
scripts/: deploy-cuda.sh  requested_cuda_version.sh  setup.sh
src/: CMakeLists.txt  main.cpp  project-global-decls.h.in
src/NNs/darknet-yolo/: .gitignore  CMakeLists.txt
src/NNs/darknet-yolo/include/: darknet.h
src/NNs/darknet-yolo/scripts/: kmeansiou.c
src/NNs/darknet-yolo/src/: activation_kernels.cu  activation_layer.c  activations.c  activations.h  art.c  avgpool_layer.c  avgpool_layer.h  avgpool_layer_kernels.cu  batchnorm_layer.c  batchnorm_layer.h  blas.c  blas.h  blas_kernels.cu  box.c  box.h  captcha.c  cifar.c  classifier.c  coco.c  col2im.c  col2im.h  compare.c  connected_layer.c  connected_layer.h  conv_lstm_layer.c  conv_lstm_layer.h  convolutional_kernels.cu  convolutional_layer.c  convolutional_layer.h  cost_layer.c  cost_layer.h  cpu_gemm.c  crnn_layer.c  crnn_layer.h  crop_layer.c  crop_layer.h  dark_cuda.c  dark_cuda.h  darknet.c  darkunistd.h  (+89 more)
src/NNs/darknet-yolo/src/cuda/: col2im_kernels.cu  crop_layer_kernels.cu  deconvolutional_kernels.cu  im2col_kernels.cu  maxpool_layer_kernels.cu
src/NNs/darknet-yolo/src/detector/: calc_map_free_ctx.c  calc_map_free_ctx.h  calc_map_init_ctx.c  calc_map_init_ctx.h  clear_context.c  clear_context.h  detector_args_parser.c  detector_args_parser.h  detector_context.h  draw_train_chart_ctx.c  draw_train_chart_ctx.h  draw_train_loss_ctx.c  draw_train_loss_ctx.h  load_net_weights_ctx.c  load_net_weights_ctx.h  prepare_load_args_ctx.c  prepare_load_args_ctx.h  print_net_init_stats_ctx.c  print_net_init_stats_ctx.h  print_net_stat_ctx.c  print_net_stat_ctx.h  read_options_ctx.c  read_options_ctx.h  run_detector.c  run_detector.h  run_detector_ctx.c  run_detector_ctx.h  save_truth_image.c  save_truth_image.h  sync_gpu_nets_ctx.c  sync_gpu_nets_ctx.h  train_detector_ctx.c  train_detector_ctx.h  train_network_ctx.c  train_network_ctx.h  traverse_detection_layers_ctx.c  traverse_detection_layers_ctx.h
src/app/: Application.cpp  Application.h  ApplicationContext.cpp  ApplicationContext.h  ApplicationFactory.cpp  ApplicationFactory.h  ApplicationHelpPrinter.cpp  ApplicationHelpPrinter.h  ApplicationVersionPrinter.cpp  ApplicationVersionPrinter.h  CMDParamNames.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  IApplication.h
src/app/tests/: CMakeLists.txt
src/app/tests/mocks/Application/src/app/: Application.h
src/app/tests/mocks/ApplicationContext2LibraryContext/src/converters/: ApplicationContext2LibraryContext.h
src/app/tests/mocks/ApplicationHelpPrinter/src/app/: ApplicationHelpPrinter.h
src/app/tests/mocks/ApplicationVersionPrinter/src/app/: ApplicationVersionPrinter.h
src/app/tests/mocks/CommandLineParser/src/app/: CommandLineParser.h
src/app/tests/mocks/LibraryFacade/: LibraryFacade.h
src/app/tests/mocks/project-global-decls/: project-global-decls.h
src/app/tests/unit/: CMakeLists.txt
src/app/tests/unit/Application/: CMakeLists.txt  UTEST_Application.cpp
src/app/tests/unit/ApplicationContext/: CMakeLists.txt  UTEST_ApplicationContext.cpp
src/app/tests/unit/ApplicationFactory/: CMakeLists.txt  UTEST_ApplicationFactory.cpp
src/app/tests/unit/ApplicationHelpPrinter/: CMakeLists.txt  UTEST_ApplicationHelpPrinter.cpp
src/app/tests/unit/ApplicationVersionPrinter/: CMakeLists.txt  UTEST_ApplicationVersionPrinter.cpp
src/app/tests/unit/CommandLineParser/: CMakeLists.txt  UTEST_CommandLineParser.cpp
src/converters/: ApplicationContext2LibraryContext.cpp  ApplicationContext2LibraryContext.h  CMakeLists.txt
src/converters/tests/: CMakeLists.txt
src/converters/tests/unit/: CMakeLists.txt
src/converters/tests/unit/ApplicationContext2LibraryContext/: CMakeLists.txt  UTEST_ApplicationContext2LibraryContext.cpp
src/darknet-adaptor/: CMakeLists.txt  DarknetContext.cpp  DarknetContext.h  DarknetController.cpp  DarknetController.h  DarknetStrings.h
src/darknet-adaptor/adaptors/: ADetector.cpp  ADetector.h  CMakeLists.txt  IDarknetAdaptor.h
src/lib/: CMakeLists.txt
src/lib/facade/: CMakeLists.txt  ILib.h  LibraryContext.h  LibraryFacade.cpp  LibraryFacade.h
src/lib/facade/tests/: CMakeLists.txt
src/lib/facade/tests/mocks/LibFactory/src/lib/libmain/: LibFactory.h
src/lib/facade/tests/unit/: CMakeLists.txt
src/lib/facade/tests/unit/LibraryFacade/: CMakeLists.txt  UTEST_LibraryFacade.cpp
src/lib/libmain/: CMakeLists.txt  LibFactory.cpp  LibFactory.h  LibMain.cpp  LibMain.h
src/lib/libmain/tests/: CMakeLists.txt
src/lib/libmain/tests/unit/: CMakeLists.txt
src/lib/libmain/tests/unit/LibFactory/: CMakeLists.txt  UTEST_LibFactory.cpp
src/lib/libmain/tests/unit/LibMain/: CMakeLists.txt  UTEST_LibMain.cpp
src/log/: CMakeLists.txt  log.h  severity-macro-consts.h
src/log/simple-logger/: CMakeLists.txt  SimpleLogger.cpp  SimpleLogger.h
src/tests/mocks/ApplicationContext/src/app/: ApplicationContext.cpp  ApplicationContext.h
src/tests/mocks/LibMain/src/lib/libmain/: LibMain.h
src/tests/mocks/LibraryContext/: LibraryContext.h
src/tests/mocks/log/src/log/: log.h
(+5 files in other folders)
