cmake_minimum_required(VERSION 3.13)

include(template-project-compile-options)
add_compile_options(${EXTRA_COMPILE_OPTIONS})
add_link_options(${EXTRA_LINK_OPTIONS})

add_executable(
  ${PROJECT_BINARY_NAME}
  main.cpp
)

target_include_directories(
  ${PROJECT_BINARY_NAME}
  PRIVATE ${CMAKE_SOURCE_DIR}
  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
  PRIVATE ${CMAKE_BINARY_DIR}
  RPIVATE $<TARGET_PROPERTY:${PROJECT_LIBRARY_NAME},INCLUDE_DIRECTORIES>
)

install(
  TARGETS ${PROJECT_BINARY_NAME}
  RUNTIME DESTINATION bin
)

configure_file(
  project-global-decls.h.in
  ${CMAKE_BINARY_DIR}/project-global-decls.h
)

set(GENERAL_MOCKS_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/tests/mocks")

add_subdirectory(app)
add_subdirectory(log)
add_subdirectory(converters)
add_subdirectory(lib)
